[build-system]
requires = ["setuptools>=45", "setuptools-pipfile"]
build-backend = "setuptools.build_meta"

[project]
name = "univcache"
authors = [
    { name = "Nikita Barabanov",    email = "barabanov.ns@gmail.com"  },
]
description = "Interconnected objects caching library"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "GPL-3.0 license" }
dynamic = ["dependencies"]

[tool.setuptools.packages.find]
where = ["."]
include = ["univcache*"]

[tool.setuptools-pipfile]
path = "Pipfile"